# sutra

./: README.md  SKILL.md  pyproject.toml
drafts/: linkedin-card.html  linkedin-post.md
examples/: buyer.sutra  finalize.sutra  knowledge.sutra  seller.sutra
spec/: GRAMMAR.ebnf  SUTRA_SPEC.md
sutra/: __init__.py  __main__.py  agent.py  ast_nodes.py  cli.py  client.py  crypto.py  interpreter.py  keystore.py  lexer.py  message.py  parser.py  persistence.py  registry.py  runtime.py  sandbox.py  security.py  server.py  tokens.py  transaction.py
wasm/: index.html  package.json  sutra.js
